{
  "version": 4,
  "terraform_version": "0.15.3",
  "serial": 12,
  "lineage": "bb11edd5-8db4-3b44-9c4e-6b35ac5d8274",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b0af3577fe5e3532",
            "arn": "arn:aws:ec2:us-east-1:808610045830:instance/i-0e3c5707209956731",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e3c5707209956731",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform_task-5",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a86e8a7786549ddb",
            "private_dns": "ip-10-0-0-6.ec2.internal",
            "private_ip": "10.0.0.6",
            "public_ip": "3.88.86.196",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a3a5be9900799e03",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ff8f01e72f1f58bd",
            "tags": {
              "Name": "Task-5 Terraform"
            },
            "tags_all": {
              "Name": "Task-5 Terraform"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-02179f1a0fa7eb8f0"
            ]
          },
          "dependencies": [
            "aws_security_group.task2_sg",
            "aws_subnet.frontend",
            "aws_vpc.lwterra"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808610045830:internet-gateway/igw-08d9653e21f4e5430",
            "id": "igw-08d9653e21f4e5430",
            "owner_id": "808610045830",
            "tags": {
              "Name": "gateway to connect"
            },
            "tags_all": {
              "Name": "gateway to connect"
            },
            "vpc_id": "vpc-08fad3ad70af4a701"
          },
          "dependencies": [
            "aws_vpc.lwterra"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808610045830:route-table/rtb-0a3465288b5a1ce1c",
            "id": "rtb-0a3465288b5a1ce1c",
            "owner_id": "808610045830",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08d9653e21f4e5430",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "vpc_id": "vpc-08fad3ad70af4a701"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internet_gw",
            "aws_vpc.lwterra"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04ce9c2c54b3f2485",
            "route_table_id": "rtb-0a3465288b5a1ce1c",
            "subnet_id": "subnet-0ff8f01e72f1f58bd"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gw",
            "aws_route_table.public_route_table",
            "aws_subnet.frontend",
            "aws_vpc.lwterra"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "task2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808610045830:security-group/sg-02179f1a0fa7eb8f0",
            "description": "Allow HTTP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02179f1a0fa7eb8f0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_HTTP",
            "name_prefix": "",
            "owner_id": "808610045830",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_http"
            },
            "tags_all": {
              "Name": "allow_http"
            },
            "timeouts": null,
            "vpc_id": "vpc-08fad3ad70af4a701"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.lwterra"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808610045830:subnet/subnet-0ff8f01e72f1f58bd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/27",
            "id": "subnet-0ff8f01e72f1f58bd",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "808610045830",
            "tags": {
              "Name": "Frontend"
            },
            "tags_all": {
              "Name": "Frontend"
            },
            "vpc_id": "vpc-08fad3ad70af4a701"
          },
          "dependencies": [
            "aws_vpc.lwterra"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "lwterra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808610045830:vpc/vpc-08fad3ad70af4a701",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-0b971a1f492be9bc6",
            "default_route_table_id": "rtb-0f1e158789a590d9b",
            "default_security_group_id": "sg-094eae237c4e1c07b",
            "dhcp_options_id": "dopt-eef7c394",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-08fad3ad70af4a701",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0f1e158789a590d9b",
            "owner_id": "808610045830",
            "tags": {
              "Name": "lwterra"
            },
            "tags_all": {
              "Name": "lwterra"
            }
          }
        }
      ]
    }
  ]
}